--- a/nkkert/index-gardening.html
+++ b/nkkert/index-gardening.html
@@ -528,11 +528,13 @@
         <div class="row">
             <div class="col-12 wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1.3s" style="visibility: visible; animation-delay: 700ms; animation-name: fadeInUp;">
                 <div class="contact_text">
-                    <p class="colored_heading">Let's Get Started</p>
-                    <h1 class="heading margin_heading heading_font_sm">Need Personal Training?</h1>
-                    <p class="info info_width contact_margin">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim veniam, quis nostrud exercitation consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
-                    <a href="javascript:void(0)" class="btn btn-medium btn-rounded btn-blue margin_button">More Information</a>
+                    <p class="colored_heading">Kapcsolat</p>
+                    <h1 class="heading margin_heading heading_font_sm">Hol érhet el bennünket?</h1>
+                    <div class="icon-box">
+                        <i class="fa fa-mobile color-summer-sky"></i>
+                        <p class="color-grey"> +(34) 609 33 17 54</p>
+                    </div>
+                    <p class="info info_width contact_margin"></p>
                 </div>
             </div>
         </div>
