feat: update nkkert

--- a/nkkert/index-gardening.html
+++ b/nkkert/index-gardening.html
@@ -340,10 +340,9 @@
             <div class="cbp-item small-screen">
                 <div class="text_wrap wow fadeIn" data-wow-delay="350ms">
                     <div class="portfolio-heading">
-                        <p class="colored_heading text_color">Watch our exclusive</p>
-                        <h1 class="heading heading_color">Gardening Gallery</h1>
-                        <p class="info info_margin">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua.</p>
+                        <p class="colored_heading text_color">Referenciáink</p>
+                        <h1 class="heading heading_color">Így dolgozunk</h1>
+                        <p class="info info_margin">Eddigi munkáink a teljesség igénye nélkül:</p>
                     </div>
                 </div>
             </div>
@@ -368,10 +367,9 @@
                     <div class="cbp-item large-screen">
                         <div class="text_wrap wow fadeIn" data-wow-delay="350ms">
                             <div class="portfolio-heading">
-                                <p class="colored_heading text_color">Watch our exclusive</p>
-                                <h1 class="heading heading_color">Gardening Gallery</h1>
-                                <p class="info info_margin">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                                    labore et dolore magna aliqua.</p>
+                                <p class="colored_heading text_color">Referenciáink</p>
+                                <h1 class="heading heading_color">Így dolgozunk</h1>
+                                <p class="info info_margin">Eddigi munkáink a teljesség igénye nélkül:</p>
                             </div>
                         </div>
                     </div>
@@ -532,9 +530,15 @@
                     <h1 class="heading margin_heading heading_font_sm">Hol érhet el bennünket?</h1>
                     <div class="icon-box">
                         <i class="fa fa-mobile color-summer-sky"></i>
-                        <p class="color-grey"> +(34) 609 33 17 54</p>
+                        <p class="color-grey">
+                            <strong>Nagy Kornél:</strong> +(36) 70 370 6869<br />
+                            <strong>Gergely László:</strong> +(36) 30 494 0342
+                        </p>
                     </div>
-                    <p class="info info_width contact_margin"></p>
+                    <div class="icon-box">
+                        <i class="fa fa-envelope color-summer-sky"></i>
+                        <p><a href="mailto:nkkertepites@gmail.com" class="color-grey">nkkertepites@gmail.com</a></p>
+                    </div>
                 </div>
             </div>
         </div>
